<resources>
    <string name="app_name">Route</string>
    <string name="nav_info">游历</string>
    <string name="nav_friends">朋友</string>
    <string name="nav_setting">设置</string>
    <string name="nav_help">帮助和反馈</string>
    <string name="nav_about">关于 Route</string>
    <string name="nav_logout">退出账号</string>
    <string name="route_title">路线</string>
    <string name="team_title">组团</string>
    <string name="to_all">查看全部</string>
    <string name="user_name">Gu Yuhong</string>
    <string name="user_accout">gu18168@gmail.com</string>
    <string name="edit">个人资料</string>
    <string name="set_title">定制个人介绍</string>
    <string name="set_title_sub">您的信息将会被公开</string>
    <string name="set_name">昵称</string>
    <string name="set_intro">个性签名</string>
    <string name="public_item_pic_desc">封面图片</string>
    <string name="public_item_share">分享</string>
    <string name="public_item_entry">探索</string>
    <string name="image_transition">image_transition</string>

    <string name="detailText">Anime is Japanese hand-drawn or computer animation. The word is the abbreviated pronunciation of animation in Japanese, where this term references all animation.Outside Japan, anime is used to refer specifically to animation from Japan or as a Japanese-disseminated animation style often characterized by colorful graphics, vibrant characters and fantastical themes.Arguably, the stylization approach to the meaning may open up the possibility of anime produced in countries other than Japan.For simplicity, many Westerners strictly view anime as an animation product from Japan.Some scholars suggest defining anime as specifically or quintessentially Japanese may be related to a new form of orientalism.The earliest commercial Japanese animation dates to 1917, and production of anime works in Japan has since continued to increase steadily. The characteristic anime art style emerged in the 1960s with the works of Osamu Tezuka and spread internationally in the late twentieth century, developing a large domestic and international audience. Anime is distributed theatrically, by television broadcasts, directly to home media, and over the Internet. It is classified into numerous genres targeting diverse broad and niche audiences.Anime is a diverse art form with distinctive production methods and techniques that have been adapted over time in response to emergent technologies. It consists of an ideal story-telling mechanism, combining graphic art, characterization, cinematography, and other forms of imaginative and individualistic techniques.The production of anime focuses less on the animation of movement and more on the realism of settings as well as the use of camera effects, including panning, zooming, and angle shots. Being hand-drawn, anime is separated from reality by a crucial gap of fiction that provides an ideal path for escapism that audiences can immerse themselves into with relative ease. Diverse art styles are used and character proportions and features can be quite varied, including characteristically large emotive or realistically sized eyes.The anime industry consists of over 430 production studios, including major names like Studio Ghibli, Gainax, and Toei Animation. Despite comprising only a fraction of Japan\'s domestic film market, anime makes up a majority of Japanese DVD sales. It has also seen international success after the rise of English-dubbed programming. This rise in international popularly has resulted in non-Japanese productions using the anime art style, but these works are usually described as anime-influenced animation rather than anime proper.</string>

    <string name="cond_text">筛选条件</string>
    <string name="set_save">保存</string>
    <string name="route_expand">了解详情</string>
    <string name="route_author_intro">提供您路线的旅游达人</string>
    <string name="route_start">路线概要</string>
    <string name="star_route">您收藏的路线</string>
    <string name="make_route">Ta 所制作的路线</string>
    <string name="no_star_route">您没有收藏的路线</string>
    <string name="buyed_route">您已购买的路线</string>
    <string name="no_search_route">我们目前尚未拥有关于此方面的路线。</string>
    <string name="no_search_suggestion">大家都爱的精选路线</string>

    <string name="add_start">设置起点</string>
    <string name="add_btw">设置经过</string>
    <string name="add_final">设置终点</string>
    <string name="add_done">完成路线</string>

    <string name="marker_title">定制地点信息</string>
    <string name="marker_sub_title">重要：它们能让其他用户更好再体验您的路线</string>
    <string name="set_marker_name">名称</string>
    <string name="set_marker_intro">一句话介绍</string>
    <string name="set_marker_method">路途备注 //建议填写注意点，如几路公交车</string>

    <string name="step_continue">继续</string>
    <string name="step_finish">完成</string>
    <string name="step_cancel">上一步</string>

    <string name="set_route_name">路线名称</string>
    <string name="set_route_intro">路线介绍</string>
    <string name="set_marker_img">设置地点图片及游玩指南</string>

</resources>
