<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_information"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/nav_friends" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/nav_setting" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group_others">
        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about" />
    </group>
</menu>