<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nest_scrollview"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/route_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#333"/>

            <LinearLayout
                android:id="@+id/route_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|bottom"
                    android:gravity="bottom"
                    android:text="@string/to_all"
                    android:textSize="20sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_more"/>

            </LinearLayout>


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/route_items"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:clipToPadding="false"
            android:paddingStart="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/team_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#333"/>

            <LinearLayout
                android:id="@+id/team_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|bottom"
                    android:gravity="bottom"
                    android:text="@string/to_all"
                    android:textSize="20sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_more"/>

            </LinearLayout>


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/team_items"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:clipToPadding="false"
            android:paddingStart="20dp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>