<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#44eceff1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eceff1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingTop="24dp"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/map_set_bg">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.gyh.login.EditText.ClearEditText
                                android:id="@+id/title_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/set_route_name"
                                android:singleLine="true"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.gyh.login.EditText.ClearEditText
                                android:id="@+id/intro_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/set_route_intro"
                                android:singleLine="true"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="2dp"
                        android:background="#ddd"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shadow"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/markers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"/>

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_or_ripple"
                android:text="@string/step_finish"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
