<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/tablayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:contentPadding="10dp">

            <include layout="@layout/route_item" />

        </android.support.v7.widget.CardView>
        
    </android.support.v4.widget.NestedScrollView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_width"
        android:layout_gravity="top"
        android:layout_marginTop="140dp"
        android:src="@drawable/user_img"
        android:translationZ="10dp"
        app:civ_border_color="#fff"
        app:civ_border_width="2dp"
        app:layout_behavior="com.gyh.login.util.AvatarImageBehavior"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/user_toolbar"
        android:layout_width="match_parent"
        android:paddingTop="24dp"
        android:layout_height="80dp"
        android:translationZ="100dp"
        app:theme="@style/ToolbarTheme" />
    
    <View
        android:id="@+id/anchor_dropdown"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/user_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/user_iv_bg"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/header_bg"/>

                <Button
                    android:id="@+id/user_edit"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="bottom|end"
                    android:layout_width="80dp"
                    android:layout_height="26dp"
                    android:textSize="12sp"
                    android:background="@drawable/edit_button"
                    android:drawableStart="@drawable/ic_editor"
                    android:paddingStart="10dp"
                    android:text="@string/edit"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/user_lv_title"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom|center_horizontal"
                android:background="#ffffff"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll">

                <LinearLayout
                    android:id="@+id/user_ll_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/user_lv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="bottom|center"
                        android:text="@string/user_name"
                        android:textColor="#000"
                        android:textSize="26sp"/>

                    <TextView
                        android:id="@+id/user_lv_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:textColor="#000"
                        android:text="@string/user_accout"/>
                </LinearLayout>
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="80dp" />


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>